--- a/src/app/tela-principal/tela-principal.component.html
+++ b/src/app/tela-principal/tela-principal.component.html
@@ -1,1 +1,47 @@
-<p>tela-principal works!</p>
+<div class="container">
+  <header>
+    <!-- Barra de navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Desafio Indra</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a routerLink="lista-usuarios">Usuários</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Histórico de Preços</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main role="main">
+    <!-- Seções principais do conteúdo -->
+    <div class="row">
+      <div class="col-md-4">
+        <!-- Seção de Resumo de Dados -->
+        <div class="card">
+          <div class="card-header">
+            Resumo de Dados
+          </div>
+          <div class="card-body">
+            <!-- Conteúdo do resumo de dados aqui -->
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <!-- Rodapé -->
+    <div class="container">
+      <span class="text-muted">© 2024 - Joao Gabriel Dev. Todos os direitos reservados.</span>
+    </div>
+  </footer>
+</div>
+
