--- a/src/app/tela-principal/tela-principal.component.html
+++ b/src/app/tela-principal/tela-principal.component.html
@@ -13,7 +13,7 @@
             <a routerLink="lista-usuarios">Usuários</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Histórico de Preços</a>
+            <a routerLink="historico-preco">Histórico de Preços</a>
           </li>
         </ul>
       </div>
