--- a/src/app/historico-precos/historico-precos.component.html
+++ b/src/app/historico-precos/historico-precos.component.html
@@ -1,1 +1,62 @@
-<p>historico-precos works!</p>
+<div class="container">
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Desafio Indra</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a routerLink="lista-usuarios">Usuários</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="historico-preco">Histórico de Preços</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<div>
+  <h2>Consultar Histórico de Preços de Combustível</h2>
+  <form class="search-form">
+      <label for="distributor">Distribuidor:</label>
+      <input type="text" id="distributor" name="distributor">
+      <button type="submit" class="btn btn-primary">Pesquisar</button>
+  </form>
+  <div>
+      <table class="table">
+          <thead>
+              <tr>
+                  <th>ID</th>
+                  <th>Município</th>
+                  <th>Região</th>
+                  <th>Bandeira</th>
+                  <th>Tipo de Combustível</th>
+                  <th>Data de Coleta</th>
+                  <th>Valor de Compra</th>
+                  <th>Valor de Venda</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td>1</td>
+                  <td>Joao Pessoa</td>
+                  <td>Nordeste</td>
+                  <td>Shell</td>
+                  <td>Alcool</td>
+                  <td>2023-03-06</td>
+                  <td>2.00</td>
+                  <td>4.00</td>
+                  <td><button class="btn btn-secundary">Editar</button></td>
+                  <td><button class="btn btn-danger">Deletar</button></td>
+              </tr>
+          </tbody>
+      </table>
+  </div>
+</div>
+</div>
+
+
