--- a/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/lista-usuarios/lista-usuarios.component.html
@@ -25,11 +25,11 @@
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">#</th>
+      <th scope="col">ID</th>
       <th scope="col">Nome</th>
       <th scope="col">Email</th>
       <th scope="col">Telefone</th>
-      <th scope="col">senha</th>
+      <th scope="col">Senha</th>
       <th scope="col"></th>
       <th scope="col"></th>
     </tr>
