--- a/src/app/historico-precos/historico-precos.component.html
+++ b/src/app/historico-precos/historico-precos.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a routerLink="lista-usuarios">Usuários</a>
+          <a routerLink="/lista-usuarios">Usuários</a>
         </li>
         <li class="nav-item">
           <a routerLink="historico-preco">Histórico de Preços</a>
