--- a/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/lista-usuarios/lista-usuarios.component.html
@@ -13,7 +13,7 @@
             <a routerLink="lista-usuarios">Usuários</a>
           </li>
           <li class="nav-item">
-            <a routerLink="historico-preco">Histórico de Preços</a>
+            <a routerLink="/historico-preco">Histórico de Preços</a>
           </li>
         </ul>
       </div>
