--- a/src/app/historico-precos/historico-precos.component.css
+++ b/src/app/historico-precos/historico-precos.component.css
@@ -16,45 +16,63 @@ header{
 .navbar-nav li a {
   text-decoration: none;
   color: black;
-  padding: 20px;
+  margin: 10px;
 }
 
-.navbar-nav li a:hover, .navbar-nav li a:visited {
+.navbar-nav li a:hover {
   color: rgb(0, 0, 0);
 }
 
-.table {
-  width: 100%;
-  border-collapse: collapse;
-  border-radius: 8px;
-  overflow: hidden;
-  margin: 0 auto;
-  margin-top: 30px;
-}
-
-.table th,
-.table td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
+.form-control {
+  margin-bottom: 10px;
+  width: 600px;
+  margin: 10px auto;
 }
 
 .btn {
-  padding: 8px 16px;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-right: 10px;
 }
 
 .btn-primary {
-  background-color: #097ef2e2;
-  color: #fff;
-  margin-top: 30px;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
-.btn-secundary{
-  background-color: green;
-  color: #fff;
+.btn-primary:hover {
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
+
+.btn-warning {
+  background-color: #ffc107;
+  border-color: #ffc107;
+}
+
+.btn-warning:hover {
+  background-color: #e0a800;
+  border-color: #e0a800;
+}
+
+.btn-danger {
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-danger:hover {
+  background-color: #c82333;
+  border-color: #bd2130;
+}
+
+.btn-secondary {
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+
+.btn-secondary:hover {
+  background-color: #5a6268;
+  border-color: #545b62;
 }
 
 .btn-danger {
