--- a/src/app/tela-principal/tela-principal.component.html
+++ b/src/app/tela-principal/tela-principal.component.html
@@ -1,3 +1,5 @@
+<body>
+
 <div class="container">
   <header>
     <!-- Barra de navegação -->
@@ -43,4 +45,4 @@
     </div>
   </footer>
 </div>
-
+</body>
