--- a/src/app/historico-precos/historico-precos.component.css
+++ b/src/app/historico-precos/historico-precos.component.css
@@ -127,6 +127,74 @@ header{
   margin-top: 20px;
 }
 
+.form-media{
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+label {
+  margin-bottom: 5px;
+  align-items: center;
+}
+
+.input-media{
+  width: 200px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin: 10px;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+p {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+}
+
+.form-regiao{
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+
+}
+
+.input-regiao{
+  width: 200px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  margin: 10px;
+}
+
+.table-regiao {
+  width: 50%;
+  border-collapse: collapse;
+  margin-left: 270px;
+}
+
+.table-regiao th,
+.table-regiao td {
+  padding: 8px;
+  text-align: center;
+}
+
+.table-regiao th {
+  background-color: #f2f2f2;
+}
+
 
 
 
