--- a/src/app/historico-precos/historico-precos.component.html
+++ b/src/app/historico-precos/historico-precos.component.html
@@ -143,7 +143,7 @@
     </table>
   </div>
 
-  <h2>Dados agrupados por data da coleta</h2>
+  <h2>Dados Agrupados Por Data Da Coleta</h2>
 
   <div class="container">
     <div></div>
@@ -165,6 +165,17 @@
       </table>
     </div>
   </div>
+
+  <h2>Obter Média de Preço da Compra e Venda Por Município</h2>
+
+  <div class="form-media">
+    <label for="municipio">Município:</label>
+    <input class="input-media" type="text" id="municipio" [(ngModel)]="municipio">
+    <button class="btn-metodos" (click)="obterMediaCompraVendaPorMunicipio()">Obter Média de Preço</button>
+    <p>A média de preço de compra para o município {{ municipio }} é: {{ mediaCompra }}</p>
+    <p>A média de preço de venda para o município {{ municipio }} é: {{ mediaVenda }}</p>
+  </div>
+
 </div>
 
 
