--- a/src/app/historico-precos/historico-precos.component.html
+++ b/src/app/historico-precos/historico-precos.component.html
@@ -1,27 +1,26 @@
-<div class="container">
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Desafio Indra</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a routerLink="/lista-usuarios">Usuários</a>
-        </li>
-        <li class="nav-item">
-          <a routerLink="historico-preco">Histórico de Preços</a>
-        </li>
-      </ul>
-    </div>
+  <a class="navbar-brand" href="#">Desafio Indra</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <nav>
+      <li class="nav-item">
+        <a routerLink="/lista-usuarios">Usuários</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="historico-preco">Histórico de Preços</a>
+      </li>
   </nav>
 </header>
 
-<div>
+<body>
 
-  <h1>Consultar Histórico de Preços de Combustível</h1>
+<div class="container">
+
+<h1>Consultar Histórico de Preços de Combustível</h1>
+<h2>Cadastre um novo Distribuidor</h2>
+
+<div>
 
   <form>
 
@@ -44,7 +43,7 @@
   </form>
 
   <div>
-      <table class="table">
+      <table class="table-user">
           <thead>
               <tr>
                   <th></th>
@@ -147,7 +146,7 @@
 
   <div class="container">
     <div></div>
-      <table class="table">
+      <table class="table-data">
         <thead>
         <tr>
           <th>ID</th>
@@ -187,6 +186,7 @@
   </div>
 
 </div>
+</body>
 
 
 
