--- a/src/app/lista-usuarios/lista-usuarios.component.css
+++ b/src/app/lista-usuarios/lista-usuarios.component.css
@@ -1,38 +1,92 @@
+body {
+  background-color: #333;
+  color: #ddd;
+}
+
 .container {
   text-align: center;
   margin-top: 20px;
+  background-color: #333;
+}
+
+nav, ul{
+  list-style: none;
+  background-color: #333;
+}
+
+a{
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.9;
+  font-size: 1.2rem;
+  background-color: #333;
+
+}
+
+.navbar-brand{
+  color: white;
+  background-color: #333;
+}
+
+a:hover{
+  opacity: 1;
+
 }
 
 header{
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 50px;
+  background-color: #333;
 }
 
-.navbar-brand {
-  font-size: 1.5rem;
+header nav{
+  display: flex;
+  padding-right: 790px;
+  background-color: #333;
+
 }
 
-.navbar-nav li a {
-  text-decoration: none;
-  color: black;
-  margin: 10px;
+header li a{
+  color: white;
 }
 
-.navbar-nav li a:hover {
-  color: rgb(0, 0, 0);
+header li{
+  margin: 0px 15px;
+
+}
+
+header li:first-child {
+  margin-left: 0;
+}
+
+header li:last-child{
+  margin-right: 0;
+}
+
+.table-user {
+  width: 98%;
+  margin: 20px;
 }
 
 .form-control {
   margin-bottom: 10px;
   width: 600px;
   margin: 10px auto;
+
 }
 
 .btn {
   border-radius: 4px;
   cursor: pointer;
   margin-right: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .btn-primary {
@@ -75,4 +129,6 @@ header{
   border-color: #545b62;
 }
 
-
+hr{
+  margin-top: 70px;
+}
