--- a/src/app/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/lista-usuarios/lista-usuarios.component.html
@@ -1,26 +1,26 @@
-<div class="container">
 
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Desafio Indra</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a routerLink="lista-usuarios">Usuários</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/historico-preco">Histórico de Preços</a>
-          </li>
-        </ul>
-      </div>
+    <a class="navbar-brand" href="#">Desafio Indra</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <nav>
+        <li class="nav-item">
+          <a routerLink="/lista-usuarios">Usuários</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="/historico-preco">Histórico de Preços</a>
+        </li>
     </nav>
   </header>
 
-    <h2>Lista de Usuários</h2>
+<body>
+
+  <div class="container">
+
+    <h1>Lista de Usuarios</h1>
+
+    <h2>Cadastre um novo Usuario</h2>
 
     <form>
       <div class="form-group">
@@ -36,7 +36,7 @@
       <input type="button" value="Cancelar" *ngIf="!btnCadastro" class="btn btn-secondary"              (click) = "cancelar()">
     </form>
 
-  <table class="table" *ngIf="tabela">
+  <table class="table-user" *ngIf="tabela">
     <thead>
 
       <tr>
@@ -61,5 +61,7 @@
       </tr>
     </tbody>
   </table>
-
 </div>
+<hr>
+
+</body>
