--- a/src/app/tela-principal/tela-principal.component.css
+++ b/src/app/tela-principal/tela-principal.component.css
@@ -1,41 +1,90 @@
+body {
+  background-color: #333;
+  color: #ddd;
+  margin: 0;
+  padding: 0;
+}
+
 .container {
+  text-align: center;
   margin-top: 20px;
+  background-color: #333;
+}
+
+nav, ul{
+  list-style: none;
+  background-color: #333;
+}
+
+a{
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.9;
+  font-size: 1.2rem;
+  background-color: #333;
+
+}
+
+.navbar-brand{
+  color: white;
+  background-color: #333;
+}
+
+a:hover{
+  opacity: 1;
+
 }
 
 header{
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 50px;
+  background-color: #333;
 }
 
-.navbar-brand {
-  font-size: 1.5rem;
+header nav{
+  display: flex;
+  padding-right: 790px;
+  background-color: #333;
+
 }
 
-.navbar-nav li a {
-  text-decoration: none;
-  color: black;
-  padding: 20px;
+header li a{
+  color: white;
+
 }
 
-.navbar-nav li a:hover, .navbar-nav li a:visited {
-  color: rgb(0, 0, 0);
+header li{
+  margin: 0px 15px;
+
 }
 
-.card-header{
-  text-align: center;
+header li:first-child {
+  margin-left: 0;
 }
 
-.col-md-4 {
-  margin-left: auto;
-  margin-right: auto;
+header li:last-child{
+  margin-right: 0;
 }
 
-.card {
+h1{
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.footer {
-  margin-top: 20px;
-  text-align: center;
+p{
+  text-align: justify;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
+
+hr{
+  margin-top: 115px;
+}
+
+
